Support for dragscroll library

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:development": "vue-cli-service build --mode development"
   },
   "dependencies": {
+    "dragscroll": "0.0.8",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.7",
