--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "build:dev": "vue-cli-service build --mode development"
+    "build:dev": "vue-cli-service build --mode development",
+    "deploy": "deploy.sh"
   },
   "dependencies": {
     "dragscroll": "0.0.8",
