--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
   "name": "myz-zonemap",
-  "version": "0.1.0",
+  "version": "2.0.3",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "build:dev": "vue-cli-service build --mode development"
+    "build:dev": "vue-cli-service build --mode development",
+    "deploy": "deploy.sh"
   },
   "dependencies": {
     "dragscroll": "0.0.8",
-    "vue": "^2.6.11",
-    "vue-router": "^3.1.6",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.3",
     "vuetify": "^1.5.24",
-    "vuex": "^3.3.0"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@mdi/font": "^3.9.97",
+    "@mdi/font": "^5.5.55",
     "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-eslint": "^3.12.1",
     "@vue/cli-service": "^3.12.1",
@@ -24,10 +25,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
-    "stylus": "^0.54.7",
+    "stylus": "^0.54.8",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.4.3"
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.6.0"
   }
 }
