--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: DEPLOY - Node.js CI
+name: DEPLOY (CI)
 
 on:
   push:
@@ -13,18 +13,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout 🛎️
+      uses: actions/checkout@v2
+      with:
+        persist-credentials: false
+
     - name: Use Node.js 12.x
       uses: actions/setup-node@v1
       with:
         node-version: 12
-    - name: Installs Dependencies
+
+    - name: Install Dependencies 🔧
       run: npm ci
-    - name: Builds the Distribution
+
+    - name: Build 🔧
       run: npm run build --if-present
-    - name: Tests the Distribution
-      run: npm test
-    - name: Deploys the Distribution
-      run: npm run deploy
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Deploy 🚀
+      uses: JamesIves/github-pages-deploy-action@3.5.9
+      with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: dist # The folder the action should deploy.
+          CLEAN: true # Automatically remove deleted files from the deploy branch
