--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         node-version: 12
 
     - name: Install Dependencies 🔧
-      run: npm ci
+      run: npm install
 
     - name: Build 🔧
       run: npm run build --if-present
