--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "build:dev": "vue-cli-service build --mode development",
-    "deploy": "deploy.sh"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "dragscroll": "0.0.8",
@@ -25,6 +25,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
+    "gh-pages": "^4.0.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.5.0",
